--- a/TM.DailyTrackR.View/TM.DailyTrackR.View.csproj
+++ b/TM.DailyTrackR.View/TM.DailyTrackR.View.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TM.DailyTrackR.Common\TM.DailyTrackR.Common.csproj" />
     <ProjectReference Include="..\TM.DailyTrackR.DataType\TM.DailyTrackR.DataType.csproj" />
+    <ProjectReference Include="..\TM.DailyTrackR.ViewModel\TM.DailyTrackR.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
