--- a/TM.DailyTrackR.View/TM.DailyTrackR.View.csproj
+++ b/TM.DailyTrackR.View/TM.DailyTrackR.View.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.102.2" />
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
   </ItemGroup>
   
